--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -44,9 +44,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
         android:text="Name"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/latin_name"
         app:layout_constraintStart_toStartOf="@+id/square"
         app:layout_constraintTop_toTopOf="@+id/square" />
 
@@ -56,6 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:background="@drawable/white_box"
+        android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/name"
         app:layout_constraintEnd_toEndOf="@+id/square"
         app:layout_constraintTop_toTopOf="@+id/name" />
@@ -64,9 +65,9 @@
         android:id="@+id/latin_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:text="Latin Name"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/nutriment_frequency"
         app:layout_constraintStart_toStartOf="@+id/name"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
@@ -75,6 +76,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/white_box"
+        android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/latin_name"
 
         app:layout_constraintEnd_toEndOf="@+id/ed_name"
@@ -87,9 +89,9 @@
         android:id="@+id/nutriment_frequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
         android:text="Nutriment"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/frequency"
         app:layout_constraintStart_toStartOf="@+id/latin_name"
         app:layout_constraintTop_toBottomOf="@+id/latin_name" />
 
@@ -98,6 +100,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:background="@drawable/white_box"
+        android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/nutriment_frequency"
         app:layout_constraintEnd_toEndOf="@+id/ed_latin_name"
         app:layout_constraintStart_toStartOf="@+id/ed_latin_name"
@@ -107,9 +110,9 @@
         android:id="@+id/frequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:text="Frequency"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/spring"
         app:layout_constraintStart_toStartOf="@+id/nutriment_frequency"
         app:layout_constraintTop_toBottomOf="@+id/nutriment_frequency" />
 
@@ -118,11 +121,11 @@
         android:id="@+id/spring"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
 
         android:text="Spring"
         android:textColor="@color/white"
         android:textSize="12dp"
+        app:layout_constraintBottom_toTopOf="@+id/ed_frequency"
         app:layout_constraintEnd_toStartOf="@+id/summer"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
@@ -174,10 +177,12 @@
         android:id="@+id/ed_frequency"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@drawable/white_box"
         android:inputType="number"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/square"
         app:layout_constraintEnd_toEndOf="@+id/spring"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/spring"
         app:layout_constraintTop_toBottomOf="@+id/spring" />
 
@@ -185,34 +190,34 @@
         android:id="@+id/ed_summer"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@drawable/white_box"
         android:inputType="number"
+        android:paddingHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="@+id/summer"
         app:layout_constraintStart_toStartOf="@+id/summer"
-        app:layout_constraintTop_toBottomOf="@+id/summer" />
+        app:layout_constraintTop_toTopOf="@+id/ed_frequency" />
 
     <EditText
         android:id="@+id/ed_autumn"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@drawable/white_box"
         android:inputType="number"
+        android:paddingHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="@+id/autumn"
         app:layout_constraintStart_toStartOf="@+id/autumn"
-        app:layout_constraintTop_toBottomOf="@+id/autumn" />
+        app:layout_constraintTop_toTopOf="@+id/ed_summer" />
 
     <EditText
         android:id="@+id/ed_winter"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:background="@drawable/white_box"
         android:inputType="number"
+        android:paddingHorizontal="10dp"
         app:layout_constraintEnd_toEndOf="@+id/winter"
         app:layout_constraintStart_toStartOf="@+id/winter"
-        app:layout_constraintTop_toBottomOf="@+id/winter" />
+        app:layout_constraintTop_toTopOf="@+id/ed_autumn" />
 
     <Button
         android:id="@+id/b_addFlower"
