--- a/app/src/main/res/layout/activity_research.xml
+++ b/app/src/main/res/layout/activity_research.xml
@@ -18,31 +18,19 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/your_flower"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:gravity="center_horizontal"
-        android:text="Your flower"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
     <EditText
         android:id="@+id/recherche_flower"
         android:layout_width="match_parent"
         android:layout_height="32dp"
-        android:layout_marginTop="32dp"
-        android:background="@drawable/white_box"
         android:layout_marginHorizontal="16dp"
-        android:textColor="@color/black"
-        android:maxLines="1"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/white_box"
         android:inputType="text"
+        android:maxLines="1"
         android:paddingLeft="10dp"
         android:paddingRight="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/your_flower"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
