--- a/app/src/main/res/layout/item_recall_layout.xml
+++ b/app/src/main/res/layout/item_recall_layout.xml
@@ -21,14 +21,13 @@
             android:id="@+id/nutriment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
             android:text=""
             android:textAlignment="center"
             android:textColor="@color/red"
             android:textSize="12dp"
             app:layout_constraintEnd_toEndOf="@+id/name"
             app:layout_constraintStart_toStartOf="@+id/name"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintTop_toBottomOf="@+id/latin_name" />
 
         <ImageView
             android:id="@+id/flower_picture"
